# site_camara

./: README.md  app.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  settings.toml  setup.py
blueprints/: __init__.py  forms.py  services.py  usuario.py  utils.py  views.py
blueprints/diarias/: controler.py  view.py
blueprints/documentos/: controler.py  view.py
blueprints/noticias/: controler.py  view.py
blueprints/sessoes/: controler.py  view.py
blueprints/vereadores/: controler.py  view.py
ext/: command.py  config.py  database.py
static/css/: cabecalho.css  notificacoes.css
static/favo/: favo.css  favo.html  favo.js
static/js/: atualizar-status.js  form-noticia.js  menu.js  notificacoes.js
templates/admin/: adm-menu.html  editar-diaria.html  editar-documento.html  editar-noticia.html  editar-sessao.html  editar-vereador.html  nova-diaria.html  nova-noticia.html  nova-sessao.html  novo-documento.html  novo-vereador.html  painel-administrativo.html  painel-diarias.html  painel-documentos.html  painel-noticias.html  painel-sessoes.html  painel-vereadores.html
templates/public/: area-de-notificacao.html  base.html  diaria.html  diarias.html  documentos.html  footer.html  index.html  login.html  menu.html  noticia.html  noticias.html  pagina-nao-encontrada.html  sessao.html  sessoes.html  vereador.html  vereadores.html
tests/: conftest.py  test_01_app_config.py  test_02_acesso_restrito.py  test_03_usuario.py  test_04_outros.py
